Revision history for Net-Statsd-Lite

{{$NEXT}}

v0.8.0    2024-07-13 13:12:43+01:00 Europe/London
  [Enhancements]
  - Code was adapted to use newer syntax features.

  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.20.

  [Documentation]
  - Updated copyright year.

  - Fixed typo in POD.

  [Tests]
  - Enabled author tests for strictness.

v0.7.1    2023-12-12 15:27:12+00:00 Europe/London
  [Documentation]
  - Fixed typo in SYNOPSIS for the set_add method.

  [Tests]
  - Switched package used for the release manifest.

  - Added clean namespace author tests.

v0.7.0    2023-05-13 13:15:15+01:00 Europe/London
  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.14.

  [Enhancements]
  - Simplified type imports.

  [Documentation]
  - Documented support policy for older Perls.

  - Bumped copyright year.

v0.6.3    2022-09-02 14:31:47+01:00 Europe/London
  [Documentation]
  - Bumped copyright year.

  - Fixed encoding of links in the README.

  [Other]
  - Signed distribution.

v0.6.2    2021-05-21 17:00:32+01:00 Europe/London
  [Documentation]
  - Fixed POD markup.

  - Note support for tagging extensions.

v0.6.1    2021-04-27 16:53:51+01:00 Europe/London
  [Enhancements]
  - Removed unused stub types library.

  - Removed checks for undefined rates.

  - Allow sampling rates for histogram metrics.

  [Bug Fixes]
  - Fix default sample rate.

  [Documentation]
  - Fixed typos in Changes.

  - Added additional link to statsd spec in SEE ALSO.

  - Add link to CloudWatch page on StatsD.

  [Tests]
  - Improved tests for sample rate cases.

v0.6.0    2021-04-25 23:07:35+01:00 Europe/London
  [Enhancements]
  - All measurement methods take an optional `$opts` hashref that can
    be used to pass additional information, such as tags.

  - Removed the use of custom type library.

  [Bug Fixes]
  - Updated DEMOLISH method to delete buffer after flush.

  [Incompatabilities]
  - Renamed internal `_record` method to `record_metric`.
