@@ -1,6 +1,8 @@
 Revision history for Net-Statsd-Lite
 
 {{$NEXT}}
+  [Documentation]
+  - Added a security policy.
 
 v0.8.0    2024-07-13 13:12:43+01:00 Europe/London
   [Enhancements]
